portico_signin: Fix signup text overflowing to icon in Russian.
This is not the right fix for this, but a temporary adjustment
to make it look good with minimal impact on other languages and
other pages.

Right fix would require changing the structure of the button, which
was not easy to do and make it look similar to how it looks now.

--- a/static/styles/portico/portico_signin.css
+++ b/static/styles/portico/portico_signin.css
@@ -749,7 +749,9 @@ html {
 button.login-social-button {
     width: 328px;
     height: auto;
-    padding-left: 35px;
+    /* Using 44px gives us more space between text and icon so that they don't overlap. */
+    /* Tested in Russian laguange which has the maximum text. */
+    padding-left: 44px;
     line-height: 1;
 
     background-size: auto 60%;
